--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <div class="grid">
     <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2">
-      <img class="img-flex" src="images/Maerten_van_Heemskerck_-_Panorama_with_the_Abduction_of_Helen_Amidst_the_Wonders_of_the_Ancient_World_-_Walters_37656.jpg" alt="">
+      <img class="img-flex" src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="">
     </div>
     <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2">
       <h1>The Seven Wonders of the Ancient World</h1>
@@ -22,7 +22,7 @@
   </div>
   <div class="grid">
     <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3">
-      <img class="img-flex" src="images/Temple_of_Artemis.jpg" alt="">
+      <img class="img-flex" src="images/temple-of-artemis.jpg" alt="">
     </div>
     <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3">
       <h2>Temple of Artemis</h2>
@@ -35,7 +35,34 @@
         <dd>Selçuk, Turkey</dd>
       </dl>
     </div>
+    <div class="unit xs-1 s-1-2 m-1-3 l-1-3 xl-1-3">
+      <img class="img-flex" src="images/colossus-of-rhodes.jpg" alt="">
+    </div>
+    <div class="unit xs-1 s-1-2 m-1-3 l-1-3 xl-1-3">
+      <h2>Temple of Artemis</h2>
+      <dl>
+        <dt>Date of construction:</dt>
+        <dd>Circa 550 BC</dd>
+        <dt>Builders:</dt>
+        <dd>Greeks</dd>
+        <dt>Location: </dt>
+        <dd>Selçuk, Turkey</dd>
+      </dl>
+    </div>
+    <div class="unit xs-1 s-1-2 m-1-3 l-1-3 xl-1-3">
+      <img class="img-flex" src="images/hanging-gardens-of-babylon.jpg" alt="">
+    </div>
+    <div class="unit xs-1 s-1-2 m-1-3 l-1-3 xl-1-3">
+      <h2>Temple of Artemis</h2>
+      <dl>
+        <dt>Date of construction:</dt>
+        <dd>Circa 550 BC</dd>
+        <dt>Builders:</dt>
+        <dd>Greeks</dd>
+        <dt>Location: </dt>
+        <dd>Selçuk, Turkey</dd>
+      </dl>
+    </div>
   </div>
-
 </body>
 </html>
