--- a/index.html
+++ b/index.html
@@ -9,22 +9,20 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-
   <div class="grid">
-    <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2">
-      <img class="img-flex" src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="">
+    <div class="unit xs-1 s-1 m-1 l-1-2 xl-2-3">
+        <img class="img-flex" src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="">
     </div>
-    <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2">
-      <h1>The Seven Wonders of the Ancient World</h1>
-      <p>Remarkable constructions of classical antiquity almost completely lost in time.
-      Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
+    <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-3">
+      <figure>
+        <h1>The Seven Wonders of the Ancient World</h1>
+        <figcaption>Remarkable constructions of classical antiquity almost completely lost in time. Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</figcaption>
+      </figure>
     </div>
   </div>
   <div class="grid">
     <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3">
       <img class="img-flex" src="images/temple-of-artemis.jpg" alt="">
-    </div>
-    <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3">
       <h2>Temple of Artemis</h2>
       <dl>
         <dt>Date of construction:</dt>
@@ -37,30 +35,26 @@
     </div>
     <div class="unit xs-1 s-1-2 m-1-3 l-1-3 xl-1-3">
       <img class="img-flex" src="images/colossus-of-rhodes.jpg" alt="">
-    </div>
-    <div class="unit xs-1 s-1-2 m-1-3 l-1-3 xl-1-3">
-      <h2>Temple of Artemis</h2>
+      <h2>Colossus of Rhodes</h2>
       <dl>
         <dt>Date of construction:</dt>
-        <dd>Circa 550 BC</dd>
+        <dd>292–280 BC</dd>
         <dt>Builders:</dt>
         <dd>Greeks</dd>
         <dt>Location: </dt>
-        <dd>Selçuk, Turkey</dd>
+        <dd>Rhodes, Greece</dd>
       </dl>
     </div>
     <div class="unit xs-1 s-1-2 m-1-3 l-1-3 xl-1-3">
       <img class="img-flex" src="images/hanging-gardens-of-babylon.jpg" alt="">
-    </div>
-    <div class="unit xs-1 s-1-2 m-1-3 l-1-3 xl-1-3">
-      <h2>Temple of Artemis</h2>
+      <h2>Hanging Gardens of Babylon</h2>
       <dl>
         <dt>Date of construction:</dt>
-        <dd>Circa 550 BC</dd>
+        <dd>Circa 600 BC</dd>
         <dt>Builders:</dt>
-        <dd>Greeks</dd>
+        <dd>Babylonians</dd>
         <dt>Location: </dt>
-        <dd>Selçuk, Turkey</dd>
+        <dd>Nineveh, Iraq</dd>
       </dl>
     </div>
   </div>
