--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
   <div class="grid">
     <div class="unit xs-1 s-1 m-1 l-1-2 xl-2-3">
-        <img class="img-flex" src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="">
+      <img class="img-flex" src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="">
     </div>
     <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-3">
       <figure>
         <h1>The Seven Wonders of the Ancient World</h1>
-        <figcaption>Remarkable constructions of classical antiquity almost completely lost in time. Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</figcaption>
+        <figcaption><p>Remarkable constructions of classical antiquity almost completely lost in time. Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p></figcaption>
       </figure>
     </div>
   </div>
