--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-3">
       <figure>
         <h1>The Seven Wonders of the Ancient World</h1>
-        <figcaption><p>Remarkable constructions of classical antiquity almost completely lost in time. Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p></figcaption>
+        <figcaption>
+          <p>Remarkable constructions of classical antiquity almost completely lost in time. Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
+        </figcaption>
       </figure>
     </div>
   </div>
